tests/bad/match/bool_not_exhaustive.oc
/// fail: Match for bool must have exactly `true` and `false` cases

def main() {
    match 1 == 2 {
        true => 5
    }
}